@@ -18,6 +18,7 @@ The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),
 - DutNgspice: Added devices_op_vars to collect all op_vars in a netlist and add them if OpVars is given in the sweep.outputdef
 - DutNgspice: Added native support for VA-modeled devices using OpenVAF
 - DutView: save_db now allows saving only some sweep_keys in case of separate databases
+- SweepDefTransSinus and SweepDefTransRamp: 2 different transient signal sweepdefs
 
 ## Changed
 
